--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "nba",
+    "database": "g5dfzsigpxa48lr2",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
@@ -10,7 +10,7 @@
   "test": {
     "username": "root",
     "password": "root",
-    "database": "nba_test",
+    "database": "g5dfzsigpxa48lr2_test",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
